Refactor form to T9Form component and create basic Results component

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,12 +15,12 @@
 }
 
 .text-field {
-  width: 50%;
-  margin-top: 3%;
+  /* width: 50%; */
+  /* margin-top: 3%; */
   text-align: center;
 }
 
 .submit-button {
-  margin-top: 2%;
-  width: 50%;
+  /* margin-top: 2%; */
+  /* width: 50%; */
 }
